# gcdp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  debug_pusht.ipynb  pyproject.toml  train.py  train_pusht.ipynb  v0.ipynb
gcdp/: __init__.py  diffusion.py  episodes.py  eval.py  logging.py  policy.py  utils.py
gcdp/config/: config.yaml  config_debug.yaml  state_predictor_config.yaml
gcdp/envs/gym-pusht/: example.py
gcdp/envs/gym-pusht/gym_pusht/: __init__.py
gcdp/envs/gym-pusht/gym_pusht/envs/: __init__.py  pusht.py  pymunk_override.py
gcdp/envs/gym-pusht/tests/: test_env.py
gcdp/model/: diffusion.py  modeling.py  policy.py
gcdp/scripts/: episodes.py  eval.py  expert_train.py  expert_trajectory.py  logger.py  simplified_train.py  test_config.py  train.py  trajectory_expert.py  utils.py  visualisations.py
gcdp/scripts/common/: logger.py  utils.py  visualisations.py
gcdp/scripts/datasets/: episodes.py  expert_datasets.py  later_steps.py  trajectory_expert.py
gcdp/scripts/evaluation/: changing_eval.py  eval.py  goal_setter.py  moving_target_evaluation.py
gcdp/scripts/training/: expert_train.py  exploration_train.py  random_train.py  simplified_train.py  state_predictor_train.py  train.py  training_utils.py
notebooks/: debug_dataset_pusht.ipynb  debug_pusht.ipynb  draft.ipynb  poses_and_viz.ipynb  train_pusht.ipynb  v0.ipynb
objects/: demonstration_statistics.npz  designed_success.pkl  termination_goal.npz
runs/outputs/train/2024-07-17/15-48-03_default/.hydra/: config.yaml  hydra.yaml
runs/outputs/train/2024-07-17/16-16-11_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-16-42_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-19-21_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-20-38_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-21-31_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-22-11_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-22-20_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-27-16_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-43-32_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-43-43_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-44-16_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/16-57-50_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-00-28_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-01-55_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-02-56_default/.hydra/: config.yaml  hydra.yaml
runs/outputs/train/2024-07-17/17-03-20_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-04-10_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-05-26_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-06-11_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-17-30_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-19-09_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-20-17_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-20-44_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-21-52_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-23-08_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-26-47_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-28-22_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-35-20_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-35-35_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-37-13_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-40-26_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/17-54-42_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/18-15-09_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/18-16-31_default/.hydra/: hydra.yaml
runs/outputs/train/2024-07-17/18-17-08_default/.hydra/: hydra.yaml
(+6 files in other folders)
